# design-patterns-in-modern-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  mkdocs.yml
adapter/: adapter_device.cpp  adapter_shape.cpp
architectural/: CMakeLists.txt
behavioral/: CMakeLists.txt
bridge/: bridge_control.cpp  bridge_impl.cpp  bridge_report.cpp
builder/: builder_car.cpp  builder_email.cpp  builder_factory_car.cpp  builder_person.cpp  builder_product.cpp
cmake/: utils.cmake
command/: command_editor.cpp
composite/: composite_component.cpp  composite_graphic.cpp
concurrency/: CMakeLists.txt
creational/: CMakeLists.txt
decorator/: decorator_component.cpp  decorator_data.cpp  decorator_notifier.cpp
facade/: facade.cpp  facade_subsytem.cpp  facade_video.cpp
factory/: factory_button.cpp  factory_drink.cpp  factory_funiture.cpp  factory_object.cpp  factory_vehicle.cpp
flyweight/: flyweight_character.cpp  flyweight_texture.cpp
iterator/: iterator_item.cpp
mediator/: mediator_chat.cpp
memento/: memento_document.cpp  memento_text_editor.cpp
observer/: observer_event.cpp  observer_news.cpp  observer_textbox.cpp
other/: CMakeLists.txt
principles/: CMakeLists.txt
prototype/: prototype_address.cpp  prototype_button.cpp  prototype_window.cpp
proxy/: proxy_image.cpp  proxy_subject.cpp
scripts/: build.bat  config.bat
singleton/: singleton_database.cpp  singleton_template.cpp
state/: state_classic.cpp  state_handmade.cpp  state_machine.cpp  state_traffic_light.cpp  state_traffic_light_1.cpp
strategy/: strategy_dynamic.cpp  (+2 more)
(+131 files in other folders)
